objects/X__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <label>A</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alfa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alfa</label>
        <referenceTo>Alfa__c</referenceTo>
        <relationshipLabel>Xs</relationshipLabel>
        <relationshipName>Xs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <label>C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>Country Name</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Zip_Code__c</fullName>
        <label>Country Zip Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <label>D</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestPicklist__c</fullName>
        <label>TestPicklist</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>XF__c</fullName>
        <formula>Text(TestPicklist__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YF__c</fullName>
        <formula>XF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YF</label>
        <type>Text</type>
    </fields>
    <label>X</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xs</pluralLabel>
    <recordTypes>
        <fullName>TypeFull</fullName>
        <active>true</active>
        <label>TypeFull</label>
    </recordTypes>
    <recordTypes>
        <fullName>TypeMid</fullName>
        <active>true</active>
        <label>TypeMid</label>
    </recordTypes>
    <recordTypes>
        <fullName>TypeSmall</fullName>
        <active>true</active>
        <label>TypeSmall</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ValidateCountryName</fullName>
        <active>true</active>
        <errorConditionFormula>VLOOKUP($ObjectType.Country__c.Fields.IsoCode__c,$ObjectType.Country__c.Fields.Name,  CountryName__c )&lt;&gt;  Country_Zip_Code__c</errorConditionFormula>
        <errorDisplayField>CountryName__c</errorDisplayField>
        <errorMessage>Country Name and Iso Code should be consistent</errorMessage>
    </validationRules>
</CustomObject>